--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "paper-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue-paper-ui",
+  "version": "0.1.1",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-paper-ui ./src/index.ts",
+    "build:wc": "vue-cli-service build --target wc --name p-button ./src/components/button/PButton.vue",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
+  "types": "types/index.d.ts",
+  "main": "dist/vue-paper-ui.umd.js",
   "dependencies": {
     "vue": "^2.5.21",
     "vue-class-component": "^6.0.0",
+    "vue-loading-template": "^1.3.2",
     "vue-property-decorator": "^7.0.0"
   },
   "devDependencies": {
@@ -23,6 +27,8 @@
     "@vue/cli-service": "^3.3.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.21",
