--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vue/cli-service": "^3.3.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
