--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  global:
+    - GITHUB_REPO: github.com/NoName4Me/noname4me.github.io.git
 language:
   node_js
 node_js:
@@ -6,12 +9,12 @@ install:
   - npm install -g yarn
 script:
   - yarn
-  - yarn docs:build
+  - yarn build
 after_script:
-  - git clone git@github.com:NoName4Me/noname4me.github.io.git
+  - git clone "https://${GITHUB_TOKEN}@${GITHUB_REPO}"
   - cd noname4me.github.io
   - mkdir -p solutions/paper-ui
-  - cp -P ../dist/ solutions/paper-ui/
+  - cp -P ../docs/.vuepress/dist/ solutions/paper-ui/
   - git add .
   - git commit -m "update Paper UI"
   - git push
