--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_script:
   - git clone "https://${GITHUB_TOKEN}@${GITHUB_REPO}"
   - cd noname4me.github.io
   - mkdir -p solutions/paper-ui
-  - cp -R ../docs/.vuepress/dist/* solutions/paper-ui/
+  - cp -Rf ../docs/.vuepress/dist/* solutions/paper-ui/
   - git add .
   - git commit -m "update Paper UI"
   - git push
